# blueally-enablement-notebooks

./: 01_sdk.ipynb  02_reasoning.ipynb  03_tools.ipynb  04_web-agent.ipynb  05_structured-output-pdf.ipynb  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: 02_reasoning-checkpoint.ipynb  03_tools-checkpoint.ipynb  04_web-agent-checkpoint.ipynb  05_structured-output-pdf-checkpoint.ipynb  research_report_1749584367-checkpoint.md  research_report_1749584537-checkpoint.md
