[project]
name = "blueally"
version = "0.1.0"
description = "Demo notebooks for the June enablement session"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "kamiwaza",
    "openai>=1.86.0",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
]

[tool.uv.sources]
kamiwaza = { git = "https://github.com/kamiwaza-ai/kamiwaza-sdk.git" }
